Better date picker for coupons

--- a/views/dashboard/integrationCoupons.jade
+++ b/views/dashboard/integrationCoupons.jade
@@ -36,7 +36,7 @@ block content
                             td(style='text-transform: uppercase;')= coupon.code
                             td= expert && coupon.expert_id == expert.id && expert.user_id == user.id ? formatName(user.first_name, user.last_name, user.title) : 'All'
                             td= coupon.expiry_time != null ? formatDate(coupon.expiry_time, "ddd, DD MMM YYYY") : 'Never'
-                            td #{coupon.num_used} / #{coupon.max_coupons || '∞'}
+                            td #{coupon.num_used} / #{coupon.max_coupons || 'Unlimited'}
                             td= formatMoney(coupon.discount_amount, coupon.discount_unit)
                                 br
                                 small #{coupon.waive_network_charges ? 'Network charges also waived' : ''}
