--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -15,6 +15,10 @@ block content
                         a.btn.btn-danger.btn-xs(data-toggle='modal', href='#ChangePasswordModal') Change Password
                     div
                         a.btn.btn-primary.btn-xs(data-id=profileId, data-toggle='modal', href= '#FetchFromLinkedInModal') Fetch Details From LinkedIn
+                    div
+                        a.btn.btn-link(href=DashboardUrls.memberProfileComplete(member.id), target="_blank") View My Public Profile
+                    div
+                        a.btn.btn-link(href=CallFlowUrls.callExpert(member.id), target="_blank") Call Me Link
         .col-md-9
             .row-fluid
                 .col-md-6
