Removed public profile endpoint

--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -16,7 +16,7 @@ block content
                     div
                         a.btn.btn-primary.btn-xs(data-id=profileId, data-toggle='modal', href= '#FetchFromLinkedInModal') Fetch Details From LinkedIn
                     div
-                        a.btn.btn-link(href=DashboardUrls.memberProfileComplete(member.id), target="_blank") View My Public Profile
+                        a.btn.btn-link(href=DashboardUrls.memberProfile(member.id), target="_blank") View My Public Profile
                     div
                         a.btn.btn-link(href=CallFlowUrls.callExpert(member.id), target="_blank") Call Me Link
         .col-md-9
