--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -7,7 +7,7 @@ meta(name='viewport', content='width=device-width, initial-scale=1')
         .col-md-8
             .row
                 .col-md-7
-                    h3
+                    h2
                         | SearchNTalk
                         small &nbsp;Alpha
                 .col-md-5
@@ -16,5 +16,7 @@ meta(name='viewport', content='width=device-width, initial-scale=1')
                             | Hey, #{loggedInUser.first_name}
                             a.btn.btn-link(href='/logout') Logout
             hr
+            if integration
+                h4 #{integration.title}
             block content
         .col-md-2
