--- a/views/dashboard/integrationCoupons.jade
+++ b/views/dashboard/integrationCoupons.jade
@@ -4,7 +4,7 @@ title User Management - #{integration.title}
 block content
     .navbar.navbar-default
         .container
-            a.navbar-brand(href=DashboardUrls.integrations()) Back
+            a.navbar-brand(href=DashboardUrls.index()) Back
             .collapse.navbar-collapse
                 ul.nav.navbar-nav
                     li
@@ -22,10 +22,11 @@ block content
             thead
                 tr
                     th.col-md-1 Code
-                    th.col-md-2 Expert
-                    th.col-md-2 Expires
+                    th.col-md-1 What's discounted
+                    th.col-md-1 Discount Amount
+                    th.col-md-2 Experts
+                    th.col-md-2 Expires On
                     th.col-md-1 Usage
-                    th.col-md-1 Discount
 
             tbody
                 if coupons
@@ -34,12 +35,11 @@ block content
                         - user = expert && expert['user'] ? expert['user'][0] : null
                         tr(style='cursor: pointer;', data-id=coupon.id, data-toggle='modal', href='#couponDetails')
                             td(style='text-transform: uppercase;')= coupon.code
+                            td= CouponType[coupon.coupon_type]
+                            td= formatMoney(coupon.discount_amount, coupon.discount_unit)
                             td= expert && coupon.expert_id == expert.id && expert.user_id == user.id ? formatName(user.first_name, user.last_name, user.title) : 'All'
                             td= coupon.expiry_time != null ? formatDate(coupon.expiry_time, "ddd, DD MMM YYYY") : 'Never'
                             td #{coupon.num_used} / #{coupon.max_coupons || 'Unlimited'}
-                            td= formatMoney(coupon.discount_amount, coupon.discount_unit)
-                                br
-                                small #{coupon.waive_network_charges ? 'Network charges also waived' : ''}
     else
             .text-center
                 label No coupons created yet
@@ -89,7 +89,7 @@ block content
                                             option(value='3') %
                                             option(value='4') Points
                             .form-group.col-md-6
-                                label.control-label Applies to
+                                label.control-label What's discounted
                                 select.form-control#(data-width='auto')
                                     - for couponType,id in CouponType
                                         option(value=id)= couponType
