Profile Fetching and display complete Basedao fix for not pulling deleted items

--- a/views/dashboard/memberEducation.jade
+++ b/views/dashboard/memberEducation.jade
@@ -79,7 +79,7 @@
                 label Are you sure you want to delete this information?
             .modal-footer
                 button.btn.btn-default(data-dismiss='modal') No
-                button.btn.btn-primary(onclick='handleDeleteClicked(event)') Yes
+                button.btn.btn-primary(onclick='handleEducationDeleteClicked(event)') Yes
 script.
     var memberId = '!{member.id}';
     var profileId = '!{profileId}';
