--- a/views/dashboard/memberEmployment.jade
+++ b/views/dashboard/memberEmployment.jade
@@ -74,7 +74,7 @@
                 label Are you sure you want to delete this information?
             .modal-footer
                 button.btn.btn-default(data-dismiss='modal') No
-                button.btn.btn-primary(onclick='handleDeleteClicked(event)') Yes
+                button.btn.btn-primary(onclick='handleEmploymentDeleteClicked(event)') Yes
 script.
     var memberId = '!{memberId}';
     var profileId = '!{profileId}';
