Reached payzippy payment page

--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -171,7 +171,7 @@ include header
                                         input.form-control#caller-name(type='text', placeholder="Caller's name", value=caller_name)
                                 .row.not-first
                                     .input-group
-                                        input.form-control#caller-phone(type='text', placeholder='10-digit phone number', value=caller-phone)
+                                        input.form-control#caller-phone(type='text', placeholder='10-digit phone number', value=caller_phone)
                         .row
                             .call-actions
                                 a.btn.btn-lg.btn-primary.first.col-xs-12.col-md-12.col-lg-12#call-now Call Now
