Member info fetch strategy fixed

--- a/views/dashboard/login.jade
+++ b/views/dashboard/login.jade
@@ -20,6 +20,7 @@ include ../scriptsAndStyles
                         //    | Remember me
                         input.btn.btn-primary(type='submit', value='Login')
                         a.btn.btn-link(href=DashboardUrls.forgotPassword()) Forgot password?
-        .col-md-2
+                        a.btn-primary.btn(href=DashboardUrls.linkedInLogin()) Login with LinkedIn
+    .col-md-2
 include footer
 script(src='/js/app/dashboard/login.js')
