Expert Profile Complete Edit and Viewing option in profile Change in formatDate in Formatter.ts search, find, get now accept transaction Email to owner on profile status change

--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -44,7 +44,7 @@ include ../scriptsAndStyles
                                     a.btn.btn-xs.btn-default.sendAgain(data-emailid=member.user.email) Send Again
                             td(style='text-align: center;')
                                 if (member.id != undefined && (member.deleted == null || member.deleted == 0))
-                                    a.fa.fa-pencil.save(href=DashboardUrls.memberProfileEdit(member.id))
+                                    a.fa.fa-pencil.save(href=DashboardUrls.memberProfile(member.id))
         .col-md-2
 
 #inviteUserModal.modal.fade(style='display: none;')
