Fixed expert reg complete page

--- a/views/expertRegistration/complete.jade
+++ b/views/expertRegistration/complete.jade
@@ -15,7 +15,7 @@ include header
             hr
             h4 Your Public Profile
             | We've created a profile page for you. Please take a moment to view it.&nbsp;
-            a.btn.btn-primary(href=DashboardUrls.memberProfileComplete(member.id), target='_blank') Take me to my profile page
+            a.btn.btn-primary(href=DashboardUrls.memberProfile(member.id), target='_blank') Take me to my profile page
             hr
             h4 Your Availability Schedule
             | We'll schedule calls for you based on settings below. You may update these settings now or later by visiting <a href='#{SearchNTalkUri}'>#{SearchNTalkUri}</a>
